<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".category">
 <Button
     android:layout_width="wrap_content"
     android:layout_height="wrap_content"
     android:text="@string/go_back"
     android:id="@+id/imageView4"
     app:layout_constraintStart_toStartOf="parent"
     app:layout_constraintTop_toTopOf="parent"
     android:layout_marginStart="21dp"
     android:layout_marginTop="23dp" />
    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/textcover"
        app:layout_constraintTop_toBottomOf="@+id/imageView4"
        >

        <TextView
            android:id="@+id/textView4"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="monospace"
            android:text="@string/choose_the"
            android:textSize="34sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            />
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/textView5"
            android:fontFamily="monospace"
            android:text="@string/category"
            android:textSize="34sp"
            app:layout_constraintStart_toStartOf="@id/textView4"
            app:layout_constraintTop_toBottomOf="@id/textView4"
            app:layout_constraintEnd_toEndOf="@id/textView4"

            />


    </androidx.constraintlayout.widget.ConstraintLayout>


    <Button
        android:id="@+id/buttonView5"
        android:layout_width="200dp"
        android:layout_height="48dp"
        android:text="@string/sports"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/buttonView6"
        app:layout_constraintVertical_bias="0.36" />

    <Button
        android:id="@+id/buttonView6"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:text="@string/entertainment"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.417" />

    <Button
        android:id="@+id/buttonView7"
        android:layout_width="200dp"
        android:layout_height="50dp"
        android:text="@string/art"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.541" />
    <Button
        android:id="@+id/startbtn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/start"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        />



</androidx.constraintlayout.widget.ConstraintLayout>